--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,16 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/test5"
-    tools:context=".Activities.LoginActivity">
+    tools:context=".Activities.RegisterActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_centerInParent="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="20dp"
         android:backgroundTint="#2b2122"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">
@@ -27,93 +24,94 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/loginActivity_tv_welcome"
+                android:id="@+id/registerActivity_tv_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:text="@string/welcome_string"
+                android:text="@string/register_string"
                 android:textColor="@color/white"
-                android:textSize="35sp" />
-
+                android:textSize="35dp" />
 
             <EditText
-                android:id="@+id/loginActivity_et_Email"
+                android:id="@+id/registerActivity_et_Email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/loginActivity_et_Password"
-                android:layout_gravity="center"
+                android:layout_below="@id/registerActivity_tv_register"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="#70ca5800"
-
                 android:drawablePadding="10dp"
                 android:hint="@string/email"
-                android:padding="20dp"
+                android:padding="15dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
-
             <EditText
-                android:id="@+id/loginActivity_et_Password"
+                android:id="@+id/registerActivity_et_FullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/loginActivity_btn_Login"
-                android:layout_gravity="center"
+                android:layout_below="@id/registerActivity_et_Email"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="#70ca5800"
+                android:drawablePadding="10dp"
+                android:hint="@string/fullName"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
+            <EditText
+                android:id="@+id/registerActivity_et_Password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/registerActivity_et_FullName"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="#70ca5800"
                 android:drawablePadding="10dp"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:padding="20dp"
+                android:padding="15dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
-
             <Button
-                android:id="@+id/loginActivity_btn_Login"
-                android:layout_width="200dp"
+                android:id="@+id/registerActivity_btn_register"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/loginActivity_tv_signUp"
+                android:layout_below="@id/registerActivity_et_Password"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:backgroundTint="#d25d00"
-                android:text="@string/login_button"
+                android:text="@string/register_button"
                 android:textColor="@color/white"
                 app:cornerRadius="20dp" />
 
             <TextView
-                android:id="@+id/loginActivity_tv_ForgotPass"
+                android:id="@+id/registerActivity_tv_AlreadyRegistered"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/loginActivity_tv_signUp"
+                android:layout_below="@id/registerActivity_btn_register"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="@string/forgot_pass"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/loginActivity_tv_signUp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"
-                android:text="@string/signUp"
+                android:padding="1dp"
+                android:text="@string/already_registered"
                 android:textColor="@color/white" />
-
         </LinearLayout>
-
 
     </androidx.cardview.widget.CardView>
 
