--- a/app/src/main/res/layout/activity_after_login.xml
+++ b/app/src/main/res/layout/activity_after_login.xml
@@ -6,14 +6,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/test5"
+    android:padding="16dp"
     tools:context=".Activities.AfterLoginActivity">
+
+    <!-- Titlu pentru adăugarea unei noi notițe -->
+    <TextView
+        android:id="@+id/addNoteTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Adaugă o notiță"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:layout_marginBottom="16dp"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"/>
 
     <!-- Spinner pentru selectarea categoriilor -->
     <Spinner
         android:id="@+id/categorySpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"/>
+        android:layout_marginBottom="16dp"
+        android:background="#95FFFFFF"
+        android:popupBackground="#FFFFFF" />
 
     <!-- RecyclerView pentru afișarea notițelor -->
     <androidx.recyclerview.widget.RecyclerView
@@ -22,6 +38,27 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="8dp"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:background="#95FFFFFF"/>
+
+    <!-- Buton pentru adăugarea unei noi notițe -->
+    <Button
+        android:id="@+id/addNoteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add note"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/black"
+        android:textColor="#FFFFFF"
+        android:fontFamily="sans-serif-medium"/>
+    <Button
+        android:id="@+id/refreshRecyclerViewButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/black"
+        android:textColor="#FFFFFF"
+        android:fontFamily="sans-serif-medium"/>
 
 </LinearLayout>
