--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="16dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/rounded_background"
+    android:elevation="4dp">
 
     <!-- TextView pentru categoria notiței -->
     <TextView
